--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <html>
 <head>
 <style>
+h1, h2 {
+  margin: 0;
+  padding: 0;
+}
+header {
+  margin-bottom: 40px;
+}
+h1 {
+  font-size: 36px;
+}
+h2 {
+  font-size: 24px;
+  color: #666;
+}
+h2 {
+  font-weight: normal;
+}
 body {
-  background-color: black;
-  color: white;
+  background-color: #EEE;
+  color: #000;
   text-align: center;
   margin-top: 100px;
+  font-family: 'Comic Sans MS';
 }
 
 a {
   color: #0FF;
 }
 
-.subscribe-link {
+a.subscribe-link {
   font-size: 32px;
   display: inline-block;
   margin: 0 auto;
@@ -21,13 +39,22 @@ a {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  background-color: #F0F;
+  background-color: #0F0;
   color: #000;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+}
+
+a.subscribe-link:hover {
 }
 </style>
 </head>
 <body>
-<h1>Nonsense Monthly</h1>
+<header>
+  <h1>Nonsense Monthly</h1>
+  <h2>The world's greatest <b>snail mail</b> programming newsletter</h2>
+</header>
+
 <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
 </body>
 </html>
