--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>Nonsense Monthly - The world's greatest snail mail programming newsletter</title>
 <style>
 h1, h2 {
   margin: 0;
