--- a/index.html
+++ b/index.html
@@ -2,29 +2,45 @@
 <head>
 <title>Nonsense Monthly - The world's greatest snail mail programming newsletter</title>
 <style>
-h1, h2 {
+h1, h2, h3 {
   margin: 0;
   padding: 0;
 }
+
 header {
+  background-color: #DDD;
   margin-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 60px;
 }
+
 h1 {
-  font-size: 36px;
+  font-size: 48px;
 }
+
 h2 {
-  font-size: 24px;
-  color: #666;
-}
-h2 {
+  color: #08F;
+  font-size: 26px;
+  margin-bottom: 20px;
   font-weight: normal;
 }
+
+header h1 {
+  color: #00C;
+}
+
+header h2 {
+  margin-bottom: 40px;
+}
+
 body {
   background-color: #EEE;
   color: #000;
   text-align: center;
-  margin-top: 100px;
+  margin: 0;
+  padding: 0 0 80px 0;
   font-family: 'Comic Sans MS';
+  line-height: 1.5;
 }
 
 a {
@@ -37,7 +53,6 @@ a.subscribe-link {
   margin: 0 auto;
   text-align: center;
   padding: 10px 20px;
-  text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
   background-color: #0F0;
@@ -48,14 +63,65 @@ a.subscribe-link {
 
 a.subscribe-link:hover {
 }
+
+.quote {
+  background-color: #FFF;
+  max-width: 600px;
+  padding: 20px;
+  margin: 30px auto;
+  border-radius: 10px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.attribution {
+  font-weight: bold;
+  color: #08F;
+}
+
+blockquote {
+  font-style: italic;
+  color: #666;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+}
 </style>
 </head>
 <body>
 <header>
   <h1>Nonsense Monthly</h1>
   <h2>The world's greatest <b>snail mail</b> programming newsletter</h2>
+
+  <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
 </header>
 
+<h2>What readers are saying about <i style="color: #00C">Nonsense Monthly</i></h2>
+
+<section class="quote">
+  <blockquote>
+    Thanks much for sending the newsletter! I got it about a week ago, and read it on my sofa. It was a totally different experience than reading it on my computer or iPad. It felt more relaxed, more meaningful…something special and out of the ordinary. I’m sure that’s what you were going for, so just wanted to let you know that you succeeded. Looking forward to more…
+  </blockquote>
+  <span class="attribution">- Helmut Kobler, Los Angeles</span>
+</section>
+
+<section class="quote">
+  <blockquote>
+    This is the only newsletter I deliberately set aside time to read. I read a lot of great newsletters. But there’s just something about receiving a piece of mail, physically opening it, and sitting down to read it, on paper, that is just so awesome. Feels like a lost luxury.
+  </blockquote>
+  <span class="attribution">- Drew Bragg, Philadelphia</span>
+</section>
+
+<section class="quote">
+  <blockquote>
+    Just finished reading my first Nonsense Monthly snail mail newsletter and truly enjoyed it. Something about holding a physical piece of paper that just feels good. Thank you for this! Can’t wait for the next one.
+  </blockquote>
+  <span class="attribution">- Chris Sonnier, Dickinson, Texas</span>
+</section>
+
+<br>
+<br>
+
 <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
+
 </body>
 </html>
