--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Nonsense Monthly - The world's greatest snail mail programming newsletter</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 h1, h2, h3 {
   margin: 0;
