Make title bold.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ blockquote {
   <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
 </header>
 
-<h2>What readers are saying about <i style="color: #00C">Nonsense Monthly</i></h2>
+<h2>What readers are saying about <i style="color: #00C;font-weight: bold;">Nonsense Monthly</i></h2>
 
 <section class="quote">
   <blockquote>
