--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ h2 {
 
 header h1 {
   color: #00C;
+  font-style: italic;
 }
 
 header h2 {
@@ -86,12 +87,18 @@ blockquote {
   padding: 0;
   margin-bottom: 10px;
 }
+
+.snail-mail {
+  font-weight: bold;
+  text-decoration: underline;
+  font-style: italic;
+}
 </style>
 </head>
 <body>
 <header>
   <h1>Nonsense Monthly</h1>
-  <h2>The world's greatest <b>snail mail</b> programming newsletter</h2>
+  <h2>The world's greatest <span class="snail-mail">snail mail</span> programming newsletter</h2>
 
   <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
 </header>
