--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Nonsense Monthly - The world's greatest snail mail programming newsletter</title>
+<title>Nonsense Monthly - A wonderful, extraordinary snail mail programming newsletter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 h1, h2, h3 {
@@ -58,9 +58,10 @@ a.subscribe-link {
   text-decoration: none;
   font-weight: bold;
   background-color: #0F0;
-  color: #000;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
+  color: #00C;
+  border: 4px dashed #00C;
 }
 
 a.subscribe-link:hover {
@@ -98,7 +99,7 @@ blockquote {
 <body>
 <header>
   <h1>Nonsense Monthly</h1>
-  <h2>The world's greatest <span class="snail-mail">snail mail</span> programming newsletter</h2>
+  <h2>A wonderful, extraordinary <span class="snail-mail">snail mail</span> programming newsletter</h2>
 
   <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
 </header>
