--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@ header {
   padding-bottom: 60px;
 }
 
+header, .content {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 h1 {
   font-size: 48px;
 }
@@ -22,8 +27,13 @@ h1 {
 h2 {
   color: #08F;
   font-size: 26px;
+  margin-top: 60px;
   margin-bottom: 20px;
   font-weight: normal;
+}
+
+h3 {
+  color: #00C;
 }
 
 header h1 {
@@ -32,6 +42,7 @@ header h1 {
 }
 
 header h2 {
+  margin-top: 0;
   margin-bottom: 40px;
 }
 
@@ -104,33 +115,45 @@ blockquote {
   <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
 </header>
 
-<h2>What readers are saying about <i style="color: #00C;font-weight: bold;">Nonsense Monthly</i></h2>
+<div class="content">
+  <h2>What readers are saying about <i style="color: #00C;font-weight: bold;">Nonsense Monthly</i></h2>
 
-<section class="quote">
-  <blockquote>
-    Thanks much for sending the newsletter! I got it about a week ago, and read it on my sofa. It was a totally different experience than reading it on my computer or iPad. It felt more relaxed, more meaningful…something special and out of the ordinary. I’m sure that’s what you were going for, so just wanted to let you know that you succeeded. Looking forward to more…
-  </blockquote>
-  <span class="attribution">- Helmut Kobler, Los Angeles</span>
-</section>
+  <section class="quote">
+    <blockquote>
+      Thanks much for sending the newsletter! I got it about a week ago, and read it on my sofa. It was a totally different experience than reading it on my computer or iPad. It felt more relaxed, more meaningful…something special and out of the ordinary. I’m sure that’s what you were going for, so just wanted to let you know that you succeeded. Looking forward to more…
+    </blockquote>
+    <span class="attribution">- Helmut Kobler, Los Angeles</span>
+  </section>
 
-<section class="quote">
-  <blockquote>
-    This is the only newsletter I deliberately set aside time to read. I read a lot of great newsletters. But there’s just something about receiving a piece of mail, physically opening it, and sitting down to read it, on paper, that is just so awesome. Feels like a lost luxury.
-  </blockquote>
-  <span class="attribution">- Drew Bragg, Philadelphia</span>
-</section>
+  <section class="quote">
+    <blockquote>
+      This is the only newsletter I deliberately set aside time to read. I read a lot of great newsletters. But there’s just something about receiving a piece of mail, physically opening it, and sitting down to read it, on paper, that is just so awesome. Feels like a lost luxury.
+    </blockquote>
+    <span class="attribution">- Drew Bragg, Philadelphia</span>
+  </section>
 
-<section class="quote">
-  <blockquote>
-    Just finished reading my first Nonsense Monthly snail mail newsletter and truly enjoyed it. Something about holding a physical piece of paper that just feels good. Thank you for this! Can’t wait for the next one.
-  </blockquote>
-  <span class="attribution">- Chris Sonnier, Dickinson, Texas</span>
-</section>
+  <section class="quote">
+    <blockquote>
+      Just finished reading my first Nonsense Monthly snail mail newsletter and truly enjoyed it. Something about holding a physical piece of paper that just feels good. Thank you for this! Can’t wait for the next one.
+    </blockquote>
+    <span class="attribution">- Chris Sonnier, Dickinson, Texas</span>
+  </section>
 
-<br>
-<br>
+  <!--
+  <h2>Frequently Asked Questions</h2>
 
-<a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
+  <h3>Who's behind this thing?</h3>
+
+  That would be ME, Jason Swett!
+  -->
+
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <a class="subscribe-link" href="https://buy.stripe.com/aEUg1n3lW0Mw5ZS9AB">Subscribe Now ($50/year)</a>
+</div>
 
 </body>
 </html>
