Add Stephen Anderson testimonial.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@ blockquote {
     <span class="attribution">- Chris Sonnier, Dickinson, Texas</span>
   </section>
 
+  <section class="quote">
+    <blockquote>
+      There's something special about receiving a hard copy newsletter once a month. I just finished reading your June Nonsense Monthly and enjoyed it thoroughly. Thanks Jason!
+    </blockquote>
+    <span class="attribution">- Stephen Anderson, Middleton, Wisconsin</span>
+  </section>
+
   <!--
   <h2>Frequently Asked Questions</h2>
 
