Add Paul Hammond.

--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ blockquote {
     <span class="attribution">- Stephen Anderson, Middleton, Wisconsin</span>
   </section>
 
+  <section class="quote">
+    <blockquote>
+      I love this! There really is something about receiving a letter through the post that feels so nice, it has to be said ❤️
+    </blockquote>
+    <span class="attribution">- Paul Hammond, Knutsford, England</span>
+  </section>
+
   <!--
   <h2>Frequently Asked Questions</h2>
 
